<resources>
    <string name="app_name">Justagg</string>

    <string name="editTextEmptyFieldError">Empty Field</string>
    <string name="emailFormatError">Please Enter Correct Email</string>
    <string name="passwordShortLength">Your password must be 6 digits or long.</string>

    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="confirmation">Confirmation</string>
    <string name="caution">Caution</string>
    <string name="alert">Alert</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="content_description">Content Description</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sign_in">Sign In</string>

    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="special_character_hint">Allowed characters are a–z,0–9. Special characters are not allowed.</string>
    <string name="by_signing_up_you_agree_to_our">By continuing, you agree to accept our</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and">&amp;</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="emailId">Email ID</string>
    <string name="password">Password</string>
    <string name="must_be_at_least_6_characters">Must be at least 6 characters</string>
    <string name="forget_password">Forget Password</string>
    <string name="sign_in_with_facebook">Sign In With Facebook</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="create_account">Create Account</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_share">Share</string>
    <string name="title_analytics">Analytics</string>
    <string name="title_menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lead">Lead</string>
    <string name="direct">Direct</string>
    <string name="personal">Personal</string>
    <string name="name">Name</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="designation">Designation</string>
    <string name="about_us">About Us</string>
    <string name="edit_details">Edit Details</string>
    <string name="search">Search</string>
    <string name="links">Links</string>
    <string name="manage">Manage</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>

</resources>