<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signin.SignInActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_margin="@dimen/_10sdp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivBack" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:autofillHints="name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailId"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/must_be_at_least_6_characters"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                style="@style/textInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:autofillHints="password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/forget_password"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_or"
                android:layout_marginVertical="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="@id/ivBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/ivBack" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_with_facebook"
                android:textAllCaps="true"
                android:backgroundTint="#033EB7"
                app:icon="@drawable/ic_fb"
                app:iconSize="@dimen/_20sdp"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toTopOf="@id/btnSignIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivIntro" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_with_google"
                android:textAllCaps="true"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp"
                app:icon="@drawable/ic_google"
                app:iconSize="@dimen/_20sdp"
                app:iconGravity="textStart"
                app:iconTintMode="multiply"
                app:layout_constraintBottom_toTopOf="@id/btnSignIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivIntro" />

            <LinearLayout
                android:id="@+id/llSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llForm">

                <TextView
                    android:id="@+id/tvTerms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/by_signing_up_you_agree_to_our"
                    android:textAlignment="center"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvPrivacyPolicy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_policy"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="?attr/colorPrimaryVariant"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:text="@string/and"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tvTermsAndConditions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_of_use"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="?attr/colorPrimaryVariant"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>