<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ui.contact.ContactFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_contacts"
        app:titleCentered="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSearch"
        style="@style/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:hint="@string/search"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="name"
            android:drawableEnd="@drawable/ic_sort"
            android:drawableTintMode="multiply"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginVertical="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/tilSearch"
        app:layout_constraintStart_toStartOf="@id/tilSearch"
        app:layout_constraintTop_toBottomOf="@id/tilSearch"
        app:layout_constraintBottom_toTopOf="@id/rvContacts">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="@dimen/_20sdp"
            app:fontFamily="@font/montserrat_bold"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="New"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:icon="@drawable/ic_add"
            app:iconGravity="textStart"
            app:iconSize="@dimen/_10sdp"
            app:iconTint="@color/black"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="@dimen/_20sdp"
            app:fontFamily="@font/montserrat_bold"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="Task"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSelect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="@dimen/_20sdp"
            app:fontFamily="@font/montserrat_bold"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="Select"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvContacts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/item_contact"
        app:layout_constraintTop_toBottomOf="@id/llFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>